      entry for 'default' is fixed to the blog default language (has to be).
    * sidebar plugin: changed the POST value to [serendipity][user_language]
      to get it into $serendipity['POST']
    * added event_hook 'multilingual_strip_langs' to strip tagged translation from strings
      i. e. category use outside the sidebar
2.35: assign lang stripped blogTitle in genpage hook (empty search was not covered)
2.34: Added legal gdpr/dsgvo info
2.33: Iconfont a11y fix (yellowled)

2.32: Remove s9y 2.0+ inline style for the fieldset

2.31:

    * Better recognize $serendipity['dbType'] query check for all supported
      postgres and all sqlite versions
    * Set strip_langs() method static

2.30 & 1.15 (sidebar): Fix Invalid argument supplied for foreach() error in
                      case the $serendipity['languages'] array is missing
                      (i.e. by emerge.sh call)

2.29 & 1.14 (sidebar): Fix config sidebar selected langs on save

2.28: Extend RSS blog title and description for lang strip

2.27: Extend blogTitle and description lang strip in the genpage hook (fixes
      the email subject inclusion for example)

2.26:

    * Fix possible missing Smarty object init
    * Add blogDescription tagged translations to 2.25

2.25:

    * Fix "Select language" displaying entries false same "<lang>, <lang>" links
    * This also fixes the "Force full language" switch
    * Fix blogTitle tagged translations for /archive page
    * Fix blogTitle tagged translations for backend

2.24: Allow PCRE_DOTALL /s modifier, in case the |multilingual_lang Smarty
      modifier replacement is used for content body textarea fields having
      newlines.

2.23 & 1.13 (sidebar):

    * Load langs by lang API method - requires S9y 1.6+
    * Fix some plugin inconsistencies
    * Append the CSS if not already used by theme

2.22: Fix missing Smarty template vars when initiating in genpage

2.21: Fix backend form lang selected entry

2.20, 1.12:
